// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowcaseCard should render correctly 1`] = `
<li
  class="md-paper md-paper--1 md-card md-background--card showcase-card"
>
  <a
    class="md-media md-media--16-9"
    href="https://react-md.mlaursen.com"
    title="react-md Documentation website"
  >
    <img
      alt="react-md Documentation website"
      src="https://react-md.mlaursen.com/assets/logo.svg"
    />
  </a>
  <div
    class="md-card-title md-card-title--primary"
  >
    <div
      class="md-card-title--title-block"
    >
      <h2
        class="md-card-title--title md-card-title--large md-text"
      >
        <a
          class="link"
          href="https://react-md.mlaursen.com"
        >
          react-md Documentation website
        </a>
      </h2>
      <h3
        class="md-card-title--title md-text--secondary"
      >
        MIkkel Laursen
      </h3>
    </div>
  </div>
  <section
    class="md-card-text"
  >
    It is a website about documenting react-md. Who'da thunk?
  </section>
  <section
    class="md-dialog-footer--card md-dialog-footer--inline"
  >
    <a
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text--theme-primary md-ink--primary md-inline-block md-cell--right"
      href="https://react-md.mlaursen.com"
    >
      <div
        class="md-ink-container"
      />
      View Product Demo
    </a>
  </section>
</li>
`;

exports[`ShowcaseCard should render correctly 2`] = `
<li
  class="md-paper md-paper--1 md-card md-background--card showcase-card"
>
  <a
    class="md-media md-media--16-9"
    href="https://react-md.mlaursen.com"
    title="react-md Documentation website"
  >
    <img
      alt="react-md Documentation website"
      src="https://react-md.mlaursen.com/assets/logo.svg"
    />
  </a>
  <div
    class="md-card-title md-card-title--primary"
  >
    <div
      class="md-card-title--title-block"
    >
      <h2
        class="md-card-title--title md-card-title--large md-text"
      >
        <a
          class="link"
          href="https://react-md.mlaursen.com"
        >
          react-md Documentation website
        </a>
      </h2>
      <h3
        class="md-card-title--title md-text--secondary"
      >
        MIkkel Laursen
      </h3>
    </div>
    <a
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-cell--right"
      href="https://github.com/mlaursen/react-md"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon fa fa-github md-text--inherit"
      />
    </a>
  </div>
  <section
    class="md-card-text"
  >
    It is a website about documenting react-md. Who'da thunk?
  </section>
  <section
    class="md-dialog-footer--card md-dialog-footer--inline"
  >
    <a
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text--theme-primary md-ink--primary md-inline-block md-cell--right"
      href="https://react-md.mlaursen.com"
    >
      <div
        class="md-ink-container"
      />
      View Product Demo
    </a>
  </section>
</li>
`;
